# page-analyzer

./: Makefile  README.md  database.sql  pyproject.toml  setup.cfg
.github/: pyci.yml
.github/workflows/: pyci.yml
page_analyzer/: __init__.py  app.py  database.py  html.py  processing_response.py  validator.py
page_analyzer/templates/: index.html  layout.html  list_of_urls.html  show.html
