[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Page analyzer"
authors = ["Elizaveta"]
readme = "README.md"
repository = "https://github.com/lisa-gold/python-project-83.git"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pytest-cov = "^4.1.0"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
