[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Page analyzer"
authors = ["Elizaveta"]
readme = "README.md"
packages = [{include = "page_analyzer"}]
repository = "https://github.com/lisa-gold/python-project-83.git"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.1"
gunicorn = "^20.1.0"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
datetime = "^5.4"
requests = "^2.31.0"
bs4 = "^0.0.2"
lxml = "^5.1.0"
validators = "^0.22.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pytest-cov = "^4.1.0"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
